--- a/WebApplication/Views/_ViewImports.cshtml
+++ b/WebApplication/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using WebApplication
-@using WebApplication.Models
+@using SprinterraTestAssignment.WebApplication
+@using SprinterraTestAssignment.WebApplication.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
