--- a/WebApplication/wwwroot/css/site.css
+++ b/WebApplication/wwwroot/css/site.css
@@ -16,11 +16,6 @@
     line-height: 1.4;
 }
 
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
-    width: 100%;
-}
-
 /* QR code generator */
 #qrCode {
     margin: 15px;
@@ -32,4 +27,12 @@
     .carousel-caption {
         display: none;
     }
+}
+
+td {
+    padding-right: 15px
+}
+
+.space {
+    padding-right: 75px;
 }
